--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -24,33 +24,16 @@
         android:scaleType="matrix"
         tools:layout_editor_absoluteX="18dp" />
 
-    <Button
-        android:id="@+id/galleryButton"
-        android:layout_width="85dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/galleryButton"
+    <SeekBar
+        android:id="@+id/hueBar"
+        android:layout_width="298dp"
+        android:layout_height="14dp"
+        android:max="200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="150dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/cameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/cameraButton"
+        android:progress="200"
+        tools:layout_editor_absoluteX="43dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/galleryButton"
-        app:layout_constraintLeft_toRightOf="@+id/galleryButton"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginBottom="20dp" />
+
 </android.support.constraint.ConstraintLayout>
