[ADD][INTERFACE] Bound button to methods + seekbar added

--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/menu/menu.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/menu/menu.xml
@@ -6,10 +6,13 @@
         android:id="@+id/phototaking"
         android:title="Take photo"
         app:showAsAction="always" />
-    <group app:showAsAction="always" />
     <item
         android:id="@+id/gallery"
         android:title="Image gallery"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/resetButton"
+        android:title="Reset"
         app:showAsAction="always" />
     <item
         android:id="@+id/changeTint"
