[FIX] Rescaled bitmaps for memory purposes

--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/menu/menu.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/menu/menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/gallery"
-        android:title="Image gallery"
+        android:title="Gallery"
         app:showAsAction="always" />
     <item
         android:id="@+id/resetButton"
