--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -120,4 +120,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/warmthBar" />
 
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/savePic"
+        app:layout_constraintBottom_toTopOf="@id/warholBar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
