--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/styles.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/styles.xml
@@ -5,7 +5,14 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:textColorPrimary">#660066</item>
+        <item name="actionMenuTextColor">#660066</item>
+        <item name="colorAccent">#730099</item>
+        <item name="colorControlNormal">@android:color/holo_purple</item>
+        <item name="colorControlActivated">@android:color/holo_red_dark</item>
+        <item name="colorControlHighlight">@android:color/holo_red_dark</item>
     </style>
 
 </resources>
